--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,16 @@
 // that you are using.
 @include angular-material-theme($arsnova-theme);
 
+body{
+  padding:0;
+  margin:0;
+}
+
+main{
+  width:100%;
+  height:100%;
+  float:left;
+}
 
 .dark {
   @include angular-material-theme($dark-theme);
