--- a/src/app/components/shared/_dialogs/room-create/room-create.component.scss
+++ b/src/app/components/shared/_dialogs/room-create/room-create.component.scss
@@ -1,4 +1,13 @@
-.mat-raised-button {
+.actions {
+  justify-content: flex-end;
+}
+
+.cancel-button {
+  margin-right: .5em;
+  color: var(--on-surface);
+}
+
+.mat-flat-button {
   background-color: var(--primary);
   color: var(--on-primary);
 }
@@ -33,4 +42,12 @@ mat-form-field {
 
 .error {
   color: var(--red) !important;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  left: -10000px;
 }
