Add missing button type definition in room create component

--- a/src/app/components/shared/_dialogs/room-create/room-create.component.html
+++ b/src/app/components/shared/_dialogs/room-create/room-create.component.html
@@ -9,6 +9,7 @@
     <div mat-dialog-actions class="dialog-action-buttons">
       <button
         mat-button
+        type="button"
         class="cancel-button"
         aria-labelledby="room-create-cancel"
         (click)="closeDialog()"
