--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.scss
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.scss
@@ -2,7 +2,7 @@ mat-form-field {
   color: var(--on-surface);
 }
 
-.mat-raised-button {
+.mat-flat-button {
   color: var(--on-primary);
   background-color: var(--primary);
 }
