Add possibility to define confirm button type in dialog action buttons component
Some components may require to define a custom confirm button type
like the account delete dialog.

--- a/src/app/components/shared/dialog/dialog-action-buttons/dialog-action-buttons.component.html
+++ b/src/app/components/shared/dialog/dialog-action-buttons/dialog-action-buttons.component.html
@@ -11,6 +11,7 @@
     <button
       type="button"
       mat-flat-button
+      class="mat-flat-button {{ confirmButtonType }}-confirm-button"
       attr.aria-labelledby="{{ ariaPrefix + 'confirm'}}"
       (click)="performConfirmButtonClickAction()"
     >{{ buttonsLabelSection + '.' + confirmButtonLabel | translate}}</button>
