--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -10,23 +10,10 @@
       {{ 'password-reset.email-invalid' | translate }}
     </mat-error>
   </mat-form-field>
-
-  <div mat-dialog-actions class="dialog-action-buttons">
-    <button
-      mat-button
-      type="button"
-      class="cancel-button"
-      aria-labelledby="password-reset-cancel"
-      (click)="closeDialog()"
-    >{{ 'password-reset.cancel' | translate}}</button>
-    <button
-      mat-flat-button
-      aria-labelledby="password-reset-reset"
-      type="submit"
-    >{{ 'password-reset.reset-password' | translate }}</button>
-  </div>
 </form>
-<div class="visually-hidden">
-  <div id="password-reset-cancel">{{ 'password-reset.cancel-description' | translate }}</div>
-  <div id="password-reset-reset">{{ 'password-reset.reset-password-description' | translate }}</div>
-</div>
+<app-dialog-action-buttons
+  buttonsLabelSection="password-reset"
+  confirmButtonLabel="reset-password"
+  [cancelButtonClickAction]="buildCloseDialogActionCallback()"
+  [confirmButtonClickAction]="buildPasswordResetActionCallback(email)"
+></app-dialog-action-buttons>
