--- a/src/app/components/creator/_dialogs/moderator-delete/moderator-delete.component.html
+++ b/src/app/components/creator/_dialogs/moderator-delete/moderator-delete.component.html
@@ -2,11 +2,10 @@
 <mat-divider></mat-divider>
 <h3>{{ 'room-page.really-remove-moderator' | translate }}</h3>
 <p>{{loginId}}</p>
-<div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="10px">
-  <button mat-raised-button class="abort" (click)="close('abort')">
-    {{ 'content.abort' | translate }}
-  </button>
-  <button mat-raised-button class="delete" (click)="close('delete')">
-    {{ 'content.delete' | translate }}
-  </button>
-</div>
+<app-dialog-action-buttons
+  buttonsLabelSection="content"
+  confirmButtonLabel="delete"
+  [confirmButtonType]=confirmButtonType
+  [cancelButtonClickAction]="buildCloseDialogActionCallback()"
+  [confirmButtonClickAction]="buildModeratorDeleteActionCallback()"
+></app-dialog-action-buttons>
