ProfessorTells, Prev_Frame_Arrow to Arrow_Back

--- a/src/app/components/shared/room-join/room-join.component.scss
+++ b/src/app/components/shared/room-join/room-join.component.scss
@@ -50,3 +50,7 @@ input:-webkit-autofill {
   -webkit-box-shadow:0 0 0 50px var(--surface) inset;
   -webkit-text-fill-color: var(--on-surface);
 }
+
+.professorTells{
+  color:var(--on-surface);
+}
