--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,17 +1,25 @@
 <footer>
   <mat-toolbar id="footer-toolbar">
+
+    <!-- MOST LEFT BUTTON -->
+
+    <!-- HELP WHEN URL /user -->
     <button mat-button (click)="navToBlog()" *ngIf="router.url !== '/home'">
       <mat-icon>help_outline</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
         {{ 'footer.help' | translate }}
       </span>
     </button>
+
+    <!-- DEMO WHEN URL /home -->
     <button mat-button (click)="showDemo()" *ngIf="router.url === '/home'">
       <mat-icon>ondemand_video</mat-icon>
       <span *ngIf="deviceType === 'desktop'">
         {{ 'footer.demo' | translate }}
       </span>
     </button>
+
+    <!-- STYLE PALETTE -->
 
     <span class="fill-remaining-space"></span>
     <button mat-button [matMenuTriggerFor]="themeMenu">
@@ -21,6 +29,8 @@
         </span>
     </button>
 
+    <!-- LANGUAGE -->
+
     <span class="fill-remaining-space"></span>
     <button mat-button [matMenuTriggerFor]="langMenu">
       <mat-icon>language</mat-icon>
@@ -29,6 +39,8 @@
         </span>
     </button>
 
+    <!-- DSVGO -->
+
     <span class="fill-remaining-space"></span>
     <button mat-button (click)="navToDSGVO()">
       <mat-icon>security</mat-icon>
@@ -36,6 +48,9 @@
         {{ 'footer.dsgvo' | translate}}
       </span>
     </button>
+
+    <!-- IMPRINT -->
+
     <span class="fill-remaining-space"></span>
     <button mat-button (click)="navToImprint()">
       <mat-icon>info</mat-icon>
@@ -43,6 +58,8 @@
         {{ 'footer.imprint' | translate}}
       </span>
     </button>
+
+    <!-- STYLE PALETTE - POPUP -->
 
     <mat-menu class="color-menu" #themeMenu="matMenu" [overlapTrigger]="false">
       <mat-grid-list cols="2">
@@ -52,38 +69,15 @@
             <mat-icon *ngIf="themeClass === theme.name" class="check">check_circle</mat-icon>
           </button>
         </mat-grid-tile>
-        <!--
-        <mat-grid-tile>
-          <button mat-icon-button class="default color-button" (click)="changeTheme('arsnova')">
-            <mat-icon class="color-icon" matTooltip="{{ 'footer.bright' | translate }}">lens</mat-icon>
-            <mat-icon *ngIf="themeClass === 'arsnova'" class="check">check_circle</mat-icon>
-          </button>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <button mat-icon-button class="dark color-button" (click)="changeTheme('dark')">
-            <mat-icon class="color-icon" matTooltip="{{ 'footer.dark' | translate }}">lens</mat-icon>
-            <mat-icon *ngIf="themeClass === 'dark'" class="check">check_circle</mat-icon>
-          </button>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <button mat-icon-button class="purple color-button" (click)="changeTheme('purple')">
-            <mat-icon class="color-icon" matTooltip="{{ 'footer.beamer' | translate }}">lens</mat-icon>
-            <mat-icon *ngIf="themeClass === 'purple'" class="check">check_circle</mat-icon>
-          </button>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <button mat-icon-button class="blue color-button" (click)="changeTheme('blue')">
-            <mat-icon class="color-icon" matTooltip="{{ 'footer.wai' | translate }}">lens</mat-icon>
-            <mat-icon *ngIf="themeClass === 'blue'" class="check">check_circle</mat-icon>
-          </button>
-        </mat-grid-tile>
-        -->
       </mat-grid-list>
     </mat-menu>
+
+    <!-- LANGUAGE - POPUP -->
 
     <mat-menu #langMenu="matMenu" [overlapTrigger]="false">
       <button mat-menu-item (click)="useLanguage('de')">{{ 'footer.german' | translate }}</button>
       <button mat-menu-item (click)="useLanguage('en')">{{ 'footer.english' | translate }}</button>
     </mat-menu>
+
   </mat-toolbar>
 </footer>
