--- a/src/app/components/shared/room-join/room-join.component.html
+++ b/src/app/components/shared/room-join/room-join.component.html
@@ -8,9 +8,9 @@
                         [formControl]="roomFormControl" [errorStateMatcher]="matcher"/>
       <mat-placeholder class="placeholder">Session ID</mat-placeholder>
       <mat-hint align="end">{{ roomId.value.length - (roomId.value.split(' ').length -1) }} / 8</mat-hint>
-      <mat-error *ngIf="roomFormControl.hasError('required')">{{ 'home-page.please-enter' | translate}}</mat-error>
-      <mat-error *ngIf="roomFormControl.hasError('pattern')">{{ 'home-page.only-numbers' | translate}}</mat-error>
-    </mat-form-field>
+      <mat-error class="professorTells" *ngIf="roomFormControl.hasError('required')">{{ 'home-page.please-enter' | translate}}</mat-error>
+      <mat-error class="professorTells" *ngIf="roomFormControl.hasError('pattern')">{{ 'home-page.only-numbers' | translate}}</mat-error>
+    </mat-form-field> 
     <button mat-fab type="submit">
       <mat-icon>input</mat-icon>
     </button>
