Fixed intendation errors

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -39,7 +39,7 @@
         </span>
     </button>
 
-    <!-- DSVGO -->
+    <!-- DSGVO -->
 
     <span class="fill-remaining-space"></span>
     <button mat-button (click)="navToDSGVO()">
