--- a/src/app/components/shared/page-not-found/page-not-found.component.html
+++ b/src/app/components/shared/page-not-found/page-not-found.component.html
@@ -1,2 +1,6 @@
-<h1>404</h1>
-<h3>The page you were looking for was not found</h3>
+
+<h2>
+  404 - Page not found
+</h2>
+<p *ngIf="path">You might want to go to the <a [routerLink]="path">"{{ path }}" page</a></p>
+
