--- a/src/assets/i18n/imprint/imprint.scss
+++ b/src/assets/i18n/imprint/imprint.scss
@@ -1,10 +1,5 @@
 p {
-  -ms-hyphens: none;
-  -webkit-hyphens: none;
-  hyphens: none;
-}
-
-.hyphens {
+  word-break: break-word;
   -ms-hyphens: auto;
   -webkit-hyphens: auto;
   hyphens: auto;
