--- a/src/app/components/shared/page-not-found/page-not-found.component.scss
+++ b/src/app/components/shared/page-not-found/page-not-found.component.scss
@@ -1,10 +1,11 @@
 h1{
+
   color: var(--on-surface)!important
 }
 p {
   font-size: 20px;
-  color: white;
+  color: black;
 }
 a {
-  color: white;
+  color: black;
 }
