Unify login-page json data into login and adjust english login button text to match the wording of the german one

--- a/src/app/components/home/home-page/home-page.component.html
+++ b/src/app/components/home/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="center" fxLayoutGap="20px" fxFill>
   <div fxLayout="row" fxLayoutAlign="center" *ngIf="deviceType === 'mobile'">
     <h1>
-      <span class="main-heading-secondary" aria-hidden="true">{{ 'login-page.welcome' | translate }}</span>
+      <span class="main-heading-secondary" aria-hidden="true">{{ 'login.welcome' | translate }}</span>
       <span class="main-heading-primary">frag.jetzt</span>
     </h1>
   </div>
@@ -11,7 +11,7 @@
       <mat-card-header *ngIf="deviceType === 'desktop'">
         <mat-card-title>
             <h1>
-                <span class="main-heading-secondary">{{ 'login-page.welcome' | translate }}</span>
+                <span class="main-heading-secondary">{{ 'login.welcome' | translate }}</span>
                 <span class="main-heading-primary">frag.jetzt</span>
               </h1>
         </mat-card-title>
