--- a/src/app/components/shared/comment-list/comment-list.component.html
+++ b/src/app/components/shared/comment-list/comment-list.component.html
@@ -34,7 +34,7 @@
       <mat-icon class="searchBarIcon">filter_list</mat-icon>
     </button>
 
-    <button mat-fab class="addButton" *ngIf="!searchBox.value && !search" (click)="openCreateDialog()"
+    <button id="add_comment_small-button" mat-fab class="addButton" *ngIf="!searchBox.value && !search" (click)="openCreateDialog()"
             matTooltip="{{ 'comment-list.add-comment' | translate }}">
       <mat-icon class="addCommentIcon">add</mat-icon>
     </button>
@@ -91,7 +91,7 @@
 </button>
 
 <div fxLayout="row" fxLayoutAlign="center" *ngIf="comments.length < 3 && !isLoading">
-  <button mat-fab class="fab-extended" (click)="openCreateDialog()">
+  <button id="add_comment-button" mat-fab class="fab-extended" (click)="openCreateDialog()">
     <mat-icon class="add">add</mat-icon>
     {{'comment-list.add-comment' | translate}}
   </button>
