Unify login-page json data into login for buttonLabelSection. Missed that in first commit

--- a/src/app/components/shared/login/login.component.html
+++ b/src/app/components/shared/login/login.component.html
@@ -49,7 +49,7 @@
 </div>
 <app-dialog-action-buttons
   [spacing]="false"
-  buttonsLabelSection="login-page"
+  buttonsLabelSection="login"
   confirmButtonLabel="login"
   [cancelButtonClickAction]="buildCloseDialogActionCallback()"
 ></app-dialog-action-buttons>
