STASH - need to figure out how to exactly do that

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -1,3 +1,7 @@
+<div fxLayout="column" class="textfields">
+  <p>{{ 'password-reset.forgot-password' | translate }}</p>
+</div>
+
 <form (ngSubmit)="resetPassword(email.value)" fxLayout="column" fxLayoutAlign="space-around"
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
@@ -12,12 +16,37 @@
       {{ 'password-reset.email-invalid' | translate }}
     </mat-error>
   </mat-form-field>
+  <button (click)="buildCloseDialogActionCallback()" mat-flat-button type="submit">
+    {{ 'password-reset.reset-password' | translate }}
+  </button>
 </form>
-<app-dialog-action-buttons
+
+<mat-divider></mat-divider>
+
+<div fxLayout="column" class="textfields">
+  <p>{{ 'password-reset.set-new-password' | translate }}</p>
+</div>
+
+<form (ngSubmit)="resetPassword(email.value)" fxLayout="column" fxLayoutAlign="space-around"
+      fxLayoutGap="10px">
+  <mat-form-field class="input-block">
+    <input matInput type="email" #email placeholder="{{ 'password-reset.email' | translate }}" [formControl]="usernameFormControl"
+           [errorStateMatcher]="matcher" name="email"/>
+    <mat-error *ngIf="usernameFormControl.hasError('required')">
+      {{ 'password-reset.email-required' | translate }}
+    </mat-error>
+    <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
+      {{ 'password-reset.email-invalid' | translate }}
+    </mat-error>
+  </mat-form-field>
+  <button (click)="buildCloseDialogActionCallback()" mat-flat-button type="button">
+    {{ 'password-reset.set-new-password-button' | translate }}
+  </button>
+</form>
+
+<app-dialog-action-buttons 
   buttonsLabelSection="password-reset"
-  confirmButtonLabel="reset-password"
   [cancelButtonClickAction]="buildCloseDialogActionCallback()"
-  [confirmButtonClickAction]="buildPasswordResetActionCallback(email)"
 ></app-dialog-action-buttons>
 
 <div class="visually-hidden">
