--- a/src/app/components/home/_dialogs/demo-video/demo-video.component.html
+++ b/src/app/components/home/_dialogs/demo-video/demo-video.component.html
@@ -1,16 +1,22 @@
-<div class="video" fxLayout="row" fxLayoutAlign="center">
-  <h2
-    [ngClass]="{'mobileText': deviceType === 'mobile', 'desktopText': deviceType === 'desktop'}"
-  >{{'footer.demo' | translate}}</h2>
-  <iframe ontabIndex="0" [ngClass]="{'mobileFrame': deviceType === 'mobile', 'desktopFrame': deviceType === 'desktop'}"
-          src="https://www.youtube.com/embed/RODwmMxLKa0?autoplay=0" frameborder="0"
-          allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div>
   <button [ngClass]="{'mobileButton': deviceType === 'mobile', 'desktopButton': deviceType === 'desktop'}"
           mat-raised-button (click)="closeDialog()" aria-labelledby="close-demo-label">
     <mat-icon>exit_to_app</mat-icon>
   </button>
 </div>
+<div>
+  <div class="intro-text">
+    <app-demo-en *ngIf="currentLang=='en'"></app-demo-en>
+    <app-demo-de *ngIf="currentLang=='de'"></app-demo-de>
+  </div>
 
-<div class="visually-hidden">
-  <div id="close-demo-label">{{'header.close-demo' | translate}}</div>
+  <div class="video" fxLayout="row" fxLayoutAlign="center">
+    <iframe ontabindex="0"
+            [ngClass]="{'mobileFrame': deviceType === 'mobile', 'desktopFrame': deviceType === 'desktop'}"
+            src="https://www.youtube.com/embed/RODwmMxLKa0?autoplay=0" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div class="visually-hidden">
+    <div id="close-demo-label">{{'header.close-demo' | translate}}</div>
+  </div>
 </div>
