Rename a11y home-page descriptions

--- a/src/app/components/shared/room-join/room-join.component.html
+++ b/src/app/components/shared/room-join/room-join.component.html
@@ -13,7 +13,7 @@
       <mat-error *ngIf="roomFormControl.hasError('required')">{{ 'home-page.please-enter' | translate}}</mat-error>
       <mat-error *ngIf="roomFormControl.hasError('pattern')">{{ 'home-page.only-numbers' | translate}}</mat-error>
     </mat-form-field>
-    <button [disabled]="cookiesDisabled()" id="session_enter-button" mat-fab type="submit" aria-labelledby="join-label">
+    <button [disabled]="cookiesDisabled()" id="session_enter-button" mat-fab type="submit" aria-labelledby="join-button-label">
       <mat-icon>input</mat-icon>
     </button>
   </div>
@@ -22,5 +22,5 @@
 
 <div class="visually-hidden">
   <div id="join-input-label">{{ 'home-page.accessibility-join-input' | translate }}</div>
-  <div id="join-label">{{'home-page.accessibility-join' | translate}}</div>
+  <div id="join-button-label">{{ 'home-page.accessibility-join-button' | translate }}</div>
 </div>
