Add aria-labelledby to room-create component input

--- a/src/app/components/shared/_dialogs/room-create/room-create.component.scss
+++ b/src/app/components/shared/_dialogs/room-create/room-create.component.scss
@@ -29,3 +29,11 @@ mat-form-field {
 .error {
   color: var(--red) !important;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  left: -10000px;
+}
