added background-color to slider

--- a/src/app/components/shared/_dialogs/present-comment/present-comment.component.scss
+++ b/src/app/components/shared/_dialogs/present-comment/present-comment.component.scss
@@ -43,3 +43,44 @@ mat-icon {
   background-color: var(--on-surface);
 }
 
+mat-slider{
+  background-color: #FFFFFF;
+}
+
+mat-slider mat-slider-thumb{
+  background-color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
