--- a/src/app/components/shared/login/login.component.html
+++ b/src/app/components/shared/login/login.component.html
@@ -11,8 +11,10 @@
   (ngSubmit)="login(userEmail.value, userPassword.value)"
   >
   <mat-form-field class="input-block">
-    <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()" #userEmail [errorStateMatcher]="matcher" [formControl]="usernameFormControl" matInput
-           name="username" placeholder="{{ 'login.email' | translate }}"/>
+    <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
+           #userEmail [errorStateMatcher]="matcher" [formControl]="usernameFormControl" matInput
+           name="username" placeholder="{{ 'login.email' | translate }}"
+           aria-labelledby="email-description"/>
     <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
       {{ 'login.email-invalid' | translate }}
     </mat-error>
@@ -21,8 +23,10 @@
     </mat-error>
   </mat-form-field>
   <mat-form-field>
-    <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()" #userPassword [errorStateMatcher]="matcher" [formControl]="passwordFormControl" matInput
-           name="password" placeholder="{{ 'login.password' | translate }}" type="password"/>
+    <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
+           #userPassword [errorStateMatcher]="matcher" [formControl]="passwordFormControl" matInput
+           name="password" placeholder="{{ 'login.password' | translate }}" type="password"
+           aria-labelledby="password-description"/>
     <mat-error *ngIf="passwordFormControl.hasError('required')">{{ 'login.password-required' | translate }}</mat-error>
   </mat-form-field>
   <button class="login" mat-flat-button type="submit">
@@ -49,3 +53,8 @@
   confirmButtonLabel="login"
   [cancelButtonClickAction]="buildCloseDialogActionCallback()"
 ></app-dialog-action-buttons>
+
+<div class="visually-hidden">
+  <div id="email-description">{{ 'login.email-description' | translate }}</div>
+  <div id="password-description">{{ 'login.password-description' | translate }}</div>
+</div>
