Change font size

--- a/src/app/components/home/_dialogs/demo-video/demo-video.component.scss
+++ b/src/app/components/home/_dialogs/demo-video/demo-video.component.scss
@@ -56,7 +56,7 @@
 }
 
 .intro-text {
-  font-size: large;
+  font-size: medium;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   color: var(--on-surface);
 }
